# openKMS

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  mkdocs.yml  package-lock.json
backend/: .env.example  README.md  dev.sh  pyproject.toml  requirements.txt  scheduler.py  worker.py
backend/alembic/: env.py
backend/app/: config.py  constants.py  database.py  logging_config.py  main.py  oidc_discovery.py
backend/scripts/: ensure_pgvector.py  seed_mock_insurance_data.py
backend/tests/: conftest.py  test_agent_message_list_shape.py  test_agent_permissions.py  test_agent_skill_hash.py  test_agent_skills_registry.py  test_agent_turn_observability.py  test_article_channel_visibility.py  test_article_review.py  test_articles_management.py  test_assistant_stream_parts.py  test_channel_tree_list.py  test_chunked_upload.py  test_comment_owned_feed.py  test_connector_catalog.py  test_connector_provision.py  test_connector_sync_range.py  test_connector_sync_schedule.py  test_connector_tushare_probe.py  test_connector_tushare_sync.py  test_console_storage.py  test_content_comments.py  test_context_guard.py  test_conversation_title.py  test_data_resource_policy.py  test_data_scope_channel_expand.py  test_dataset_manage_permissions.py  test_deep_agents_langfuse.py  test_document_channel_visibility.py  test_document_export_import.py  test_document_fetch_token.py  test_document_link_acl.py  test_document_list_schema.py  test_document_processing_status.py  test_document_storage.py  test_document_write_acl.py  test_documents_constants.py  test_faq_polish.py  test_feature_toggles.py  test_global_search.py  test_health_status.py  (+34 more)
openkms-cli/: .env.example  .gitignore  README.md  pyproject.toml
openkms-cli/openkms_cli/: __init__.py  __main__.py  app.py  auth.py  backend_defaults.py  baidu_bos.py  baidu_fetch_url.py  baidu_parser.py  extract.py  kb_cli.py  kb_indexer.py  logging_config.py  office_convert.py  page_index.py  parse_cli.py  parse_result.py  parser.py  pipeline_cli.py  settings.py  wiki_cli.py
openkms-cli/schemas/: document_parse_result.schema.json
openkms-cli/tests/: __init__.py  test_auth.py  test_backend_defaults.py  test_baidu_bos.py  test_baidu_fetch_url.py  test_baidu_parser.py  test_kb_indexer.py  test_logging_config.py  test_office_convert.py  test_parse_result_schema.py  test_parser_helpers.py  test_parser_restructure.py
qa-agent/: .env.example  README.md  dev.sh  pyproject.toml
qa-agent/qa_agent/: __init__.py  agent.py  auth.py  backend_defaults.py  bm25_index.py  config.py  kb_answer_sources.py  langfuse_client.py  llm_chat.py  llm_config.py  logging_config.py  main.py  ontology_client.py  page_index_client.py  request_context.py  retriever.py  schemas.py  tools.py
(+1199 files in other folders)
