[project]
name = "openkms-cli"
version = "0.1.0"
description = "OpenKMS CLI - document parsing and pipeline tools for openKMS backend integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
parse = [
    "paddleocr>=3.4.0",
    "paddlepaddle>=3.3.0",
    "paddlex[ocr]>=3.4.2",
    "numpy>=2.0,<2.4",
    "Pillow>=10.0.0",
    "openai>=1.0.0",
    "PyMuPDF>=1.24.0",
]
pipeline = [
    "boto3>=1.26.0",
]
metadata = [
    "pydantic-ai>=0.0.14",
    "openai>=1.0.0",
]
kb = [
    "psycopg[binary]>=3.0.0",
    "pgvector>=0.3.0",
    "openai>=1.0.0",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
openkms-cli = "openkms_cli.__main__:run"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["openkms_cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
